--- a/.html
+++ b/.html
@@ -108,3 +108,16 @@
   <script src="script.js"></script>
 </body>
 </html>
+<section id="gallery">
+  <div class="container">
+    <h2>Gallery</h2>
+    <div class="gallery-grid">
+      <img src="gallery1.jpg" alt="Event 1">
+      <img src="gallery2.jpg" alt="Event 2">
+      <img src="gallery3.jpg" alt="Event 3">
+      <img src="gallery4.jpg" alt="Event 4">
+    </div>
+    <button id="prev-button">Prev</button>
+    <button id="next-button">Next</button>
+  </div>
+</section>
